<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activtiy.MainActivity"
    android:id="@+id/setting"
    android:background="@color/WhiteSmoke">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:orientation="horizontal"
        android:background="@drawable/header">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/Registere_Restursnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/resturanter" />


        <Button
            android:id="@+id/Registere_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/personer" />


        <Button
            android:id="@+id/Bestilling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/bestilling" />

        <Button
            android:id="@+id/Innstilling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/innstilling" />
    </LinearLayout>




</RelativeLayout>